--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
-
-.Nav-item {
+<link> rel="stylesheet" href="style.css"> </link>
+.Nav-about {
+   display: inline-block;
     width: 100px;
     height: 100px;
     padding: 5px;
     border: 1px solid blue;
     background-color: yellow;
 }
-
-span.b {
+.Nav-Skills{
     display: inline-block;
     width: 100px;
     padding: 5px;
     border: 1px solid blue;
     background-color: yellow;
 }
-
-span.c {
+.Nav-Work {
     display: block;
     width: 100px;
     height: 100px;
     padding: 5px;
     border: 1px solid blue;
     background-color: yellow;
+}
+.Nav.Contact {
+width: 100px;
+height: 100px;
+padding: 5px;
+border: 1px solid blue;
+background-color: yellow;
 }
